force-app/main/default/objects/pse__Practice__c/fields/CT_Allow_Timecards_Without_Assignment__c.field-meta.xml
<CustomField>
    <fullName>CT_Allow_Timecards_Without_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Timecards Without Assignment</label>
    <type>Checkbox</type>
</CustomField>