force-app/main/default/objects/pse__Practice__c/fields/CT_Default_Recognition_Template__c.field-meta.xml
<CustomField>
    <fullName>CT_Default_Recognition_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Recognition Template</label>
    <referenceTo>ffrr__Template__c</referenceTo>
    <relationshipLabel>Practices</relationshipLabel>
    <relationshipName>Practices</relationshipName>
    <type>Lookup</type>
</CustomField>