force-app/main/default/objects/pse__Practice__c/fields/CT_Expected_Recovery_Rate__c.field-meta.xml
<CustomField>
    <fullName>CT_Expected_Recovery_Rate__c</fullName>
    <label>Expected Recovery Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>