force-app/main/default/objects/pse__Practice__c/fields/CT_Mandatory_Timesheet_Notes__c.field-meta.xml
<CustomField>
    <fullName>CT_Mandatory_Timesheet_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory Timesheet Notes</label>
    <type>Checkbox</type>
</CustomField>