force-app/main/default/objects/pse__Practice__c/fields/CT_Practice_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>CT_Practice_Full_Name__c</fullName>
    <formula>CASE(pse__Hierarchy_Depth__c, 
0,  Name , 
1,   pse__Parent_Practice__r.Name + &quot; / &quot; + Name ,
2,   pse__Global_Practice__r.Name + &quot; / &quot; + pse__Parent_Practice__r.Name + &quot; / &quot; + Name,
3,   pse__Global_Practice__r.Name + &quot; / &quot; + pse__Parent_Practice__r.pse__Parent_Practice__r.Name + &quot; / &quot; + pse__Parent_Practice__r.Name + &quot; / &quot; + Name,
     pse__Global_Practice__r.Name + &quot; / &quot; + pse__Parent_Practice__r.pse__Parent_Practice__r.pse__Parent_Practice__r.Name+ &quot; / &quot; + pse__Parent_Practice__r.pse__Parent_Practice__r.Name + &quot; / &quot; + pse__Parent_Practice__r.Name + &quot; / &quot; + Name)</formula>
    <label>Practice Full Name</label>
    <type>Text</type>
</CustomField>