force-app/main/default/objects/pse__Practice__c/fields/CT_Project_or_Milestone_Recognition__c.field-meta.xml
<CustomField>
    <fullName>CT_Project_or_Milestone_Recognition__c</fullName>
    <label>Project or Milestone Recognition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
                <default>true</default>
                <label>Project</label>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>