force-app/main/default/objects/pse__Practice__c/fields/CT_Rate_Practice__c.field-meta.xml
<CustomField>
    <fullName>CT_Rate_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Practices (Rate Practice)</relationshipLabel>
    <relationshipName>Rate_Practices</relationshipName>
    <type>Lookup</type>
</CustomField>