force-app/main/default/objects/pse__Practice__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>pse__Grp__c</referenceTo>
    <relationshipLabel>Practices</relationshipLabel>
    <relationshipName>Practices</relationshipName>
    <type>Lookup</type>
</CustomField>