force-app/main/default/objects/pse__Practice__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>CT_Practice_Full_Name__c</columns>
    <columns>pse__Parent_Practice__c</columns>
    <columns>pse__Current_Time_Period__c</columns>
    <columns>ffpsai__OwnerCompany__c</columns>
    <columns>CT_Rate_Practice__c</columns>
    <columns>pse__Current_Time_Period_End_Date__c</columns>
    <columns>pse__Planned_Bookings__c</columns>
    <columns>pse__Planned_Billings__c</columns>
    <columns>pse__Hierarchy_Depth__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>